prevented horizontal scrolling on landing page mobile view

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -22,6 +22,11 @@
     box-sizing: border-box;
 }
 
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 html {
     scroll-behavior: smooth;
 }
